<resources>
    <string name="root_media_folder" translatable="false">https://4682-2a09-bac1-7560-18-00-84-5c.ngrok-free.app/Clickshot/media/</string>
    <string name="link_tomcat" translatable="false">https://4682-2a09-bac1-7560-18-00-84-5c.ngrok-free.app/Clickshot/</string>
    <string name="empty_news" translatable="false">emptyNews</string>
    <string name="add_to_tag_people" translatable="false">addToTagPeople</string>
    <string name="logo" translatable="false">logo</string>
    <string name="changeTheme" translatable="false">changeTheme</string>
    <string name="direct" translatable="false">direct</string>
    <string name="home" translatable="false">home</string>
    <string name="post_context" translatable="false">post_context</string>
    <string name="img" translatable="false">img</string>
    <string name="video" translatable="false">video</string>
    <string name="back" translatable="false">back</string>
    <string name="send_comment" translatable="false">send_comment</string>
    <string name="profile_context" translatable="false">settings</string>
    <string name="validation_error" translatable="false">validation_error</string>
    <string name="close" translatable="false">close</string>
    <string name="done" translatable="false">done</string>
    <string name="close_reply" translatable="false">close_reply</string>
    <string name="mime_image" translatable="false">image</string>
    <string name="mime_video" translatable="false">video</string>
    <string name="mime_audio" translatable="false">mpeg</string>
    <string name="mime_text_plain" translatable="false">text/plain</string>
    <string name="description" translatable="false">description</string>
    <string name="prev" translatable="false">Prev</string>
    <string name="play_stop" translatable="false">PlayStop</string>
    <string name="next" translatable="false">Next</string>
    <string name="notifications_title">Notifications</string>
    <string name="size_restriction">Content size should be less then 60mb</string>
    <string name="user_not_authorised">User are not authorised</string>
    <string name="user_notification">User</string>
    <string name="subscribe_notification">subscribe to you</string>
    <string name="unsubscribe_notification">unsubscribe to you</string>
    <string name="like_notification">like your post</string>
    <string name="save_notification">save to you</string>
    <string name="tag_notification">tagged you</string>
    <string name="comment_notification">comment to your post</string>
    <string name="reply_notification">reply to your comment</string>
    <string name="email_successfully_changed">Email has been changed</string>
    <string name="user_are_not_exists">User are not exists</string>
    <string name="tagged_people">Tagged people…</string>
    <string name="successful_delete">Successful delete</string>
    <string name="unsuccessful_delete">Successful delete</string>
    <string name="reply">Reply</string>
    <string name="author">Author</string>
    <string name="comment_has_been_sent">Comment has been sent</string>
    <string name="find_post">Start type to find post</string>
    <string name="successful_user_update">Successfully update</string>
    <string name="confirmed">Confirmed</string>
    <string name="not_confirmed">Not confirmed</string>
    <string name="search" translatable="false">search</string>
    <string name="add_post" translatable="false">add_post</string>
    <string name="notifications" translatable="false">notifications</string>
    <string name="app_name" translatable="false">ClickShot</string>
    <string name="label" translatable="false">Label</string>
    <string name="avatar" translatable="false">Avatar</string>
    <string name="email_are_not_valid">Email is not valid</string>
    <string name="en" translatable="false">English</string>
    <string name="uk" translatable="false">Українська</string>
    <string name="code" translatable="false">+38</string>
    <string name="gmail" translatable="false">\@gmail.com</string>
    <string name="remember_me">Remember me</string>
    <string name="login_hint_phone">Phone number</string>
    <string name="login_hint_username">Username</string>
    <string name="login_hint_surname">Surname</string>
    <string name="login_hint_bio">Bio</string>
    <string name="change_info">Change info</string>
    <string name="login_hint_email">Email</string>
    <string name="password_hint">Password</string>
    <string name="password_hint_repeat">Repeat password</string>
    <string name="password_forgot">Forgot password?</string>
    <string name="show_password">Show</string>
    <string name="hide_password">Hide</string>
    <string name="log_in">Log In</string>
    <string name="sing_in">Sing In</string>
    <string name="send_code">Send code</string>
    <string name="have_an_acc">Have an account?\t</string>
    <string name="do_not_have_an_acc">Don\'t have an account?\t</string>
    <string name="phone_reg">Phone</string>
    <string name="email_reg">Email</string>
    <string name="sms">You can receive SMS-notifications from us for security and login purposes</string>
    <string name="create_account">Create new account</string>
    <string name="mail_code">code</string>
    <string name="get_login_link">Get new password</string>
    <string name="confirm_code">Confirm code</string>
    <string name="can_not_login">Unable to login?</string>
    <string name="or">OR</string>
    <string name="error_send_password1">You have to let info</string>
    <string name="let_name">Add you name</string>
    <string name="next_step">Next</string>
    <string name="name">Name</string>
    <string name="let_password">Add password</string>
    <string name="birthday_hint">Birthday</string>
    <string name="birthday_borders">Not correct date</string>
    <string name="let_birthday">Set your birthday</string>
    <string name="birthday_error">Not correct year</string>
    <string name="birthday_error_age">User must be at least 16 years old</string>
    <string name="birthday_error_date">Date must be greater than current</string>
    <string name="let_name_info">Add you name to let your friends find you</string>
    <string name="forgot_pass_info">Enter your email address, username or phone number and we will send you a message to restore access to your account</string>
    <string name="confirm_code_text">Confirm code that we have sent to you in e-mail what you have indicated to registration</string>
    <string name="create_new_password_after_forgot">Create new password</string>
    <string name="create_new_password_after_forgot_info">It looks like you forgot your previous password. Enter a new password</string>
    <string name="check_receive_news_letters">Receive emails from ClickShot</string>
    <string name="check_hide_phone">Hide phone number from other users</string>
    <string name="check_hide_email">Hide email from other users</string>
    <string name="add_photo_header">Add profile photo</string>
    <string name="add_photo_info">Add profile photo to your friends able to know you, or add late</string>
    <string name="add_photo_btn_info">Add photo</string>
    <string name="add_btn_skip">Skip</string>
    <string name="add_contacts_header">Subscribe to your contacts</string>
    <string name="subscribe_btn">Subscribe</string>
    <string name="unsubscribe_btn">Unsubscribe</string>
    <string name="amount_likes_title">Like:</string>
    <string name="comments_title">Comments</string>
    <string name="add_comment">Add comment…</string>
    <string name="auth_attempt">You must try to authorize at least 1 time</string>
    <string name="same_password">Passwords can not match previous one</string>
    <string name="error_no_photo">You have to set photo to continue</string>
    <string name="tag_people_item">User nickname</string>
    <string name="find_user">Start write username to find</string>
    <string name="internal_error">Internal error</string>
    <string name="context_error">Like post at least one time ^_^</string>
    <string name="file_loader">File is loaded</string>
    <string name="answer_to">Answer to</string>
    <string name="change_comment">Change comment</string>
    <string name="remove_post_question">Do you really want to delete post?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="video_btn">video</string>
    <string name="image_btn">image</string>
    <string name="audio_btn">audio</string>
    <string name="tiramisu_or_better">You should have version equals or better then Android 13 (Tiramisu)</string>
    <string name="settings">Settings</string>
    <string name="languages_title">Choose language:</string>
    <string name="news_line_end_title">Guess this is the end…</string>
    <string name="news_line_end">Add post or wait for someone to do it 🌚</string>
    <string name="posts">Posts</string>
    <string name="followings">Followings</string>
    <string name="followers">Followers</string>
    <string name="remove_post">Remove</string>
    <string name="download">Download</string>
    <string name="copy_post_qr">Copy QR to post</string>
    <string name="complain_post">Complain</string>
    <string name="phone_book_permission">Allow to phone book permission</string>
    <string name="media_permission">Allow to media</string>
    <string name="permission">Permissions</string>
    <string name="permission_cancel">Deny</string>
    <string name="permission_ok">OK</string>
    <string name="choose_theme">Choose theme</string>
    <string name="limit_access">Limit access</string>
    <string name="block">Block user</string>
    <string name="hide_my_story">Hide my story</string>
    <string name="copy_profile_url">Copy profile URL</string>
    <string name="share_profile">Share profile</string>
    <string name="qr_code">QR code</string>
    <string name="edit_profile_context">Edit profile</string>
    <string name="statistic_context">Statistic</string>
    <string name="saved_context">Saved</string>
    <string name="log_out">Log out</string>
    <string name="link_to_page">Copy link to page</string>
    <string name="qr_link_to_page">Copy qr link to page</string>
    <string name="new_post">New Post</string>
    <string name="preview">preview</string>
    <string name="add_description">Add description</string>
    <string name="tag_people">Tag people</string>
    <string name="add_a_place">Add a place</string>
    <string name="postpone_publication">Postpone publication</string>
    <string name="phone_number_error_length">Number has include 12 numbers</string>
    <string name="phone_number_error_values">Number has include only numbers 0–9</string>
    <string name="username_error_start_end">Username has start with letters and end only letters or numbers</string>
    <string name="username_error_length">1–20 symbols</string>
    <string name="username_error_spec_symbols">Has include spec symbols only .-</string>
    <string name="email_error_spec_symbols">Email has to include spec symbols only _.- and only one @</string>
    <string name="password_error_length">Password has to include 8–32 characters</string>
    <string name="password_error_letters">Password has to include at least one uppercase letter, one lowercase letter one number 0–9</string>
    <string name="password_error_numbers">Password has to include one number 0–9</string>
    <string name="password_error_spec_symbols">Password has to include one special character @$!%*?&amp;</string>
    <string name="password_repeat_error">Password mismatch</string>
    <string name="successfully_loaded_0">Successfully loaded…</string>
    <string name="unsuccessfully_loaded_1">Unsuccessfully loaded</string>
    <string name="files_not_supported_2">Files not supported</string>
    <string name="unrecognized_server_error_3">Unrecognized file server error</string>
    <string name="file_not_found_4">File not found</string>
</resources>