<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/create_post"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_list_main"
    android:gravity="top|center"
    android:orientation="vertical"
    android:theme="@style/Theme.Instagram.System"
    tools:context=".authentication.Registration">

    <include layout="@layout/languages_spinner" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/close"
            android:src="@drawable/close" />

        <TextView
            style="@style/Text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/new_post" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/done"
            android:src="@drawable/done" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:background="@color/for_skeleton"
                android:contentDescription="@string/preview" />

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:autofillHints="Add description"
                android:hint="@string/add_description"
                android:inputType="text" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/separator" />

        <TextView
            style="@style/Text"
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/tag_people" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/separator" />

        <TextView
            style="@style/Text"
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/add_a_place" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/separator" />

        <TextView
            style="@style/Text"
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/postpone_publication" />

    </LinearLayout>

</LinearLayout>