<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:id="@+id/end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:contentDescription="@string/empty_news"
        android:src="@drawable/empty_news" />

    <TextView
        style="@style/Bold_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/news_line_end_title" />

    <TextView
        style="@style/Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/news_line_end" />

</LinearLayout>