<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_list_main"
    android:gravity="top|center"
    android:orientation="vertical"
    android:theme="@style/Theme.Instagram.System"
    tools:context=".authentication.Registration">

    <include layout="@layout/languages_spinner" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/label"
                android:src="@drawable/instagram_logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="gone"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/reg_phone"
                    style="@style/Authentication_Button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    tools:text="@string/phone_reg" />

                <TextView
                    android:id="@+id/reg_email"
                    style="@style/Authentication_Button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    tools:text="@string/email_reg" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/reg_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/country_code"
                    style="@style/Authentication_Button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:visibility="gone"
                    tools:text="@string/code" />

                <EditText
                    android:id="@+id/phone_or_email"
                    style="@style/Authentication_EditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints="Login"
                    android:inputType="textEmailAddress"
                    tools:hint="@string/login_hint_phone"
                    tools:ignore="LabelFor" />

                <TextView
                    android:id="@+id/email_name"
                    style="@style/Authentication_Button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/gmail" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/reg_checkBoxes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/receive_news_letters"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@string/check_receive_news_letters" />

                <CheckBox
                    android:id="@+id/hide_phone"
                    android:layout_width="match_parent"
                    android:visibility="gone"
                    android:layout_height="wrap_content"
                    tools:text="@string/check_hide_phone" />

                <CheckBox
                    android:id="@+id/hide_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@string/check_hide_email" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/validation_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/validation_alert"
                    android:contentDescription="@string/validation_error"
                    android:src="@drawable/validation_error"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/reg_log_in"
                    style="@style/Authentication_LogIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@string/sing_in" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <include layout="@layout/remember_me" />

                <include layout="@layout/footer_have_account" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>