<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/set_photo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_theme"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="50dp"
    android:theme="@style/Theme.Instagram.System"
    tools:context=".authentication.after_reg.SetAvatar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:gravity="center">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/label"
            android:src="@drawable/camera" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/add_photo_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/add_photo_header" />

        <TextView
            android:id="@+id/add_photo_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/add_photo_info" />

        <Button
            android:id="@+id/photo_button"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_photo_btn_info" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/other_variant"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="18sp"
                android:text="@string/or" />

        </LinearLayout>

        <TextView
            android:id="@+id/skip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/add_btn_skip" />

    </LinearLayout>

    <include layout="@layout/footer_have_account" />

</LinearLayout>