<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/authorisation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_list_main"
    android:gravity="top|center"
    android:orientation="vertical"
    android:theme="@style/Theme.Instagram.System"
    tools:context=".authentication.Registration">

    <include layout="@layout/languages_spinner" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/label"
                android:src="@drawable/instagram_logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/login_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:visibility="gone"
                    android:gravity="center" />

                <LinearLayout
                    android:id="@+id/login_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/country_code"
                        style="@style/Authentication_Button"
                        android:layout_width="wrap_content"
                        android:visibility="gone"
                        android:layout_height="match_parent"
                        tools:text="@string/code" />

                    <EditText
                        android:id="@+id/auth_login"
                        style="@style/Authentication_EditText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:autofillHints="Login"
                        android:inputType="text"
                        tools:hint="@string/login_hint_phone"
                        tools:ignore="LabelFor" />

                    <TextView
                        android:id="@+id/email_name"
                        style="@style/Authentication_Button"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        tools:text="@string/gmail" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/auth_pass"
                    style="@style/Authentication_EditText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autofillHints="Password"
                    android:inputType="textPassword"
                    tools:hint="@string/password_hint"
                    tools:ignore="LabelFor" />

                <Button
                    android:id="@+id/auth_eye"
                    style="@style/Authentication_Button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    tools:text="@string/show_password" />
            </LinearLayout>

            <TextView
                android:id="@+id/auth_forgot_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                tools:text="@string/password_forgot" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/validation_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/validation_alert"
                    android:contentDescription="@string/validation_error"
                    android:src="@drawable/validation_error"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/auth_log_in"
                    style="@style/Authentication_LogIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@string/log_in" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <include layout="@layout/remember_me" />

                <include layout="@layout/footer_dont_have_account" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>